--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 30vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -33,4 +33,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.main-container {
+  display: grid;
+  grid-template-columns: 2fr 5fr;
 }
