--- a/src/App.css
+++ b/src/App.css
@@ -6,15 +6,16 @@
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 100px;
-  width: 100px;
+  height: 50px;
+  width: 50px;
   pointer-events: none;
 }
 
 .App-header {
   background-color: #282c34;
   min-height: 30vh;
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   flex-direction: column;
   align-items: center;
   justify-content: top;
@@ -44,4 +45,9 @@
   border: 2px solid #fff;
   margin-top: 20px;
   max-width: 50vw;
+}
+
+.weatherIcon {
+  height: 50px;
+  width: 50px;
 }
