--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,16 @@
   height: 50px;
   width: 50px;
 }
+
+button.google {
+  border: 2px solid #fff;
+}
+
+button.google:hover {
+  border: 3px solid #fff;
+}
+
+img.googleLogo {
+  height: 30px;
+  width: 30px;
+}
