control fetchstatus and divide up speech messages

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,13 @@
   justify-content: top;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
+  border-bottom: 2px solid #fff;
+}
+
+.App-header p {
+  margin: 0;
 }
 
 .App-link {
@@ -37,8 +44,9 @@
 }
 
 .main-container {
+  min-height: 70vh;
   display: grid;
-  grid-template-columns: 2fr 5fr;
+  grid-template-columns: 2fr 3fr 2fr;
 }
 
 .articleImg {
@@ -52,11 +60,11 @@
   width: 50px;
 }
 
-button.google {
+button.btn-lg {
   border: 2px solid #fff;
 }
 
-button.google:hover {
+button.btn-lg:hover {
   border: 3px solid #fff;
 }
 
